<resources>
    <string name="app_name">MovieApp</string>
    <string name="list_movie">List movie</string>
    <string name="movie_detail">Movie detail</string>
    <string name="refresh">Refresh</string>
    <string name="movie_title">Title: %1$s</string>
    <string name="movie_overview">Overview: %1$s</string>
    <string name="movie_status">Status: %1$s</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="username_validation_error">Username must have at least 4 characters</string>
    <string name="password_validation_error">Password must have at least 4 characters</string>
    <string name="unknown_message">Unknown message</string>
    <string name="user_login_success">%1$s login success</string>
    <string name="list_movie_title">List Movie</string>
</resources>
